test/unit/assets/syntax_error/empty_sigil_z.exs
defmodule ZiglerTest.DryRun.EmptySigilZ do
  use Zigler, dry_run: true

  ~Z"""
  fn foo() i64 {
    return 47;
  }
  """

end
